Correction d'erreur (nested p element) dans la console en ouvrant le collapse Equipements

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: auto;
+  margin-top: 20px;
   background: #000;
   color: #fff;
 
